--- a/interior/index.html
+++ b/interior/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css"> </head>
 
 <body>
     <div class="container">
@@ -27,8 +26,7 @@
             <div class="slider-text">
                 <p class="trending">TRENDING</p>
                 <h2 class="slider-h2">Fishnet Chair</h2>
-                <p class="slider-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a>
-            </div>
+                <p class="slider-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a> </div>
             <div class="navigation">
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle circle-active"></a>
@@ -39,26 +37,22 @@
             <div class="line-text clearfix"> <a href="#" class="featured">Featured</a> <a href="#" class="new">New</a> <a href="#" class="explore-all clearfix">explore all <img src="img/arrow.svg" alt="arrow"></a></div>
             <div class="featured-new-menu">
                 <div class="card-background card-1">
-                    <div class="card-content">
-                        <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
+                    <div class="card-content"> <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
                         <h6 class="card-title">Fishnet Chair</h6>
                         <p class="card-description">Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div><div class="card-background card-2">
-                    <div class="card-content">
-                        <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
+                    <div class="card-content"> <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
                         <h6 class="card-title">Fishnet Chair</h6>
                         <p class="card-description">Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div><div class="card-background card-3">
-                    <div class="card-content">
-                        <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
+                    <div class="card-content"> <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
                         <h6 class="card-title">Fishnet Chair</h6>
                         <p class="card-description">Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div><div class="card-background card-4 right-card">
-                    <div class="card-content">
-                        <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
+                    <div class="card-content"> <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
                         <h6 class="card-title">Fishnet Chair</h6>
                         <p class="card-description">Seat and back with upholstery made of cold cure foam</p>
                     </div>
@@ -69,18 +63,15 @@
             <div class="promo-left clearfix">
                 <p class="exclusive">exclusive</p>
                 <h3 class="promo-h3">Fishnet Chair</h3>
-                <p class="promo-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a>
-            </div>
+                <p class="promo-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a> </div>
             <div class="promo-right">
                 <p class="exclusive">exclusive</p>
                 <h3 class="promo-h3">Fishnet Chair</h3>
-                <p class="promo-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a>
-            </div>
+                <p class="promo-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a> </div>
         </div>
         <div class="trending-line padding-site">
             <div class="trending-text clearfix">
-                <p class="trending-head clearfix">Trending Products</p> <a href="#" class="explore-all">explore all <img src="img/arrow.svg" alt="arrow"></a>
-            </div>
+                <p class="trending-head clearfix">Trending Products</p> <a href="#" class="explore-all">explore all <img src="img/arrow.svg" alt="arrow"></a> </div>
             <div class="trending-catalog">
                 <a href="#" class="trending-picture"><img src="img/product-11.jpg" alt="product-11"></a><a href="#" class="trending-picture"><img src="img/product-21.jpg" alt="product-21"></a><a href="#" class="trending-picture trending-picture-right"><img src="img/product-31.jpg" alt="product-31"></a><a href="#" class="trending-picture"><img src="img/product-41.jpg" alt="product-41"></a><a href="#" class="trending-picture"><img src="img/product-5.jpg" alt="product-51"></a><a href="#" class="trending-picture trending-picture-right"><img src="img/product-6.jpg" alt="product-61"></a>
             </div>
@@ -89,9 +80,7 @@
             <div class="hot-deal-text">
                 <p class="hot-deal">Hot deal</p>
                 <h2 class="hot-deal-h2">Fishnet Chair</h2>
-                <p class="hot-deal-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p>
-                <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a>
-            </div>
+                <p class="hot-deal-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a> </div>
             <div class="navigation">
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle circle-active"></a>
@@ -103,10 +92,7 @@
                 <div class="exclusive-text">
                     <p class="exclusive">exclusive</p>
                     <h3 class="exclusive-h3">Fishnet Chair</h3>
-                    <p class="exclusive-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p>
-                    <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a>
-                </div>
-
+                    <p class="exclusive-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a> </div>
             </div>
             <div class="exclusive-right">
                 <a href="#" class="exclusive-image top-exclusive-image"><img src="img/product-2-sm.jpg" alt="exclusive-image"></a><a href="#" class="exclusive-image top-exclusive-image"><img src="img/product-3-sm.jpg" alt="exclusive-image"></a><a href="#" class="exclusive-image"><img src="img/product-4-sm.jpg" alt="exclusive-image"></a><a href="#" class="exclusive-image"><img src="img/product-5-sm.jpg" alt="exclusive-image"></a>
@@ -125,31 +111,23 @@
             <div class="footer-content">
                 <div class="contact-us">
                     <h6 class="contact-h6">Contact Us</h6>
-                    <p class="contact-text">132A Bridge Road Richmond VIC
-                        Australia.<br /><br />Talk to us on 1300 132
-                        info@interior.com</p>
+                    <p class="contact-text">132A Bridge Road Richmond VIC Australia.
+                        <br />
+                        <br />Talk to us on 1300 132 info@interior.com</p>
                 </div>
                 <div class="useful-information clearfix">
                     <h6 class="useful-h6">Useful Information</h6>
                     <div class="info-left-list">
                         <ul class="left-list">
-                            <li class="info-list">
-                                <a href="#" class="info-link">Sales terms</a>
-                            </li>
-                            <li class="info-list">
-                                <a href="#" class="info-link">Customer care</a>
-                            </li>
+                            <li class="info-list"> <a href="#" class="info-link">Sales terms</a> </li>
+                            <li class="info-list"> <a href="#" class="info-link">Customer care</a> </li>
                             <li class="info-list"><a href="#" class="info-link">Delivery</a></li>
                         </ul>
                     </div>
                     <div class="info-right-list">
                         <ul class="right-list">
-                            <li class="info-list">
-                                <a href="#" class="info-link">Architect accounts</a>
-                            </li>
-                            <li class="info-list">
-                                <a href="#" class="info-link">Careers</a>
-                            </li>
+                            <li class="info-list"> <a href="#" class="info-link">Architect accounts</a> </li>
+                            <li class="info-list"> <a href="#" class="info-link">Careers</a> </li>
                             <li class="info-list"><a href="#" class="info-link">Exchanges & returns</a></li>
                         </ul>
                     </div>
@@ -157,20 +135,20 @@
                 <div class="stay-in-touch">
                     <h6 class="stay-h6">Let’s Stay in Touch!</h6>
                     <p class="stay-text">Suscribe to know about our latest news, products and special offers just for suscribers.</p>
-                    <input type="email" class="email" placeholder="your email address">
+                    <div class="email-line">
+                        <form action="#">
+                            <input type="email" placeholder="your email address" class="email-input">
+                            <input type="submit" class="submit"> </form>
+                    </div>
                 </div>
             </div>
-            <div class="lower-footer">
-                <span class="copyright">&#169; Copyright - INTERIOR 2016. All Rights Reserved.</span>
+            <div class="lower-footer"> <span class="copyright">&#169; Copyright - INTERIOR 2016. All Rights Reserved.</span>
                 <div class="social-links">
-                    <a href="#" class="circle-link"></a>
-                    <a href="#" class="circle-link"></a>
-                    <a href="#" class="circle-link"></a>
-                    <a href="#" class="circle-link"></a></div>
-
-                <span class="cookies">Terms &#38; Conditions / Privacy policy &#38; Cookies</span>
-            </div>
-
+                    <a href="#" class="circle-link"><img src="img/facebook-icon.png" alt="facebook" width="13px;"></a>
+                    <a href="#" class="circle-link"><img src="img/twitter-icon.png" alt="twitter" width="14px"></a>
+                    <a href="#" class="circle-link"><img src="img/google-icon.png" alt="google" width="14"></a>
+                    <a href="#" class="circle-link"><img src="img/pinterest-icon.png" alt="pinterest" width="15"></a>
+                </div> <span class="cookies">Terms &#38; Conditions / Privacy policy &#38; Cookies</span> </div>
         </div>
     </div>
 </body>
