--- a/interior/index.html
+++ b/interior/index.html
@@ -13,11 +13,11 @@
             <div class="header clearfix">
                 <a href="#" class="logo"><img src="img/logo%20(1).svg" alt="logo"></a>
                 <ul class="menu">
-                    <li class="menu-list"><a href="#" class="menu-link menu-link-active">HOME</a></li>
-                    <li class="menu-list"><a href="#" class="menu-link">PRODUCTS</a></li>
+                    <li class="menu-list"><a href="#" class="menu-link">HOME</a></li>
+                    <li class="menu-list"><a href="product.html" class="menu-link">PRODUCTS</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">HISTORY</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
-                    <li class="menu-list"><a href="#" class="menu-link">CONTACT</a></li>
+                    <li class="menu-list"><a href="contact.html" class="menu-link">CONTACT</a></li>
                     <li class="menu-list">
                         <a href="#" class="menu-link"><img src="img/search.svg" alt="search"></a>
                     </li>
@@ -34,25 +34,25 @@
             </div>
         </div>
         <div class="featured-new-line padding-site">
-            <div class="line-text clearfix"> <a href="#" class="featured">Featured</a> <a href="#" class="new">New</a> <a href="#" class="explore-all clearfix">explore all <img src="img/arrow.svg" alt="arrow"></a></div>
+            <div class="line-text clearfix"> <a href="#" class="featured">Featured</a> <a href="#" class="new">New</a> <a href="product.html" class="explore-all clearfix">explore all <img src="img/arrow.svg" alt="arrow"></a></div>
             <div class="featured-new-menu">
                 <div class="card-background card-1">
-                    <div class="card-content"> <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
+                    <div class="card-content"> <a href="deals.html" class="card-button"><img src="img/arrow.svg" alt=">"></a>
                         <h6 class="card-title">Fishnet Chair</h6>
                         <p class="card-description">Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div><div class="card-background card-2">
-                    <div class="card-content"> <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
+                    <div class="card-content"> <a href="deals.html" class="card-button"><img src="img/arrow.svg" alt=">"></a>
                         <h6 class="card-title">Fishnet Chair</h6>
                         <p class="card-description">Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div><div class="card-background card-3">
-                    <div class="card-content"> <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
+                    <div class="card-content"> <a href="deals.html" class="card-button"><img src="img/arrow.svg" alt=">"></a>
                         <h6 class="card-title">Fishnet Chair</h6>
                         <p class="card-description">Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div><div class="card-background card-4 right-card">
-                    <div class="card-content"> <a href="#" class="card-button"><img src="img/arrow.svg" alt=">"></a>
+                    <div class="card-content"> <a href="deals.html" class="card-button"><img src="img/arrow.svg" alt=">"></a>
                         <h6 class="card-title">Fishnet Chair</h6>
                         <p class="card-description">Seat and back with upholstery made of cold cure foam</p>
                     </div>
@@ -71,9 +71,9 @@
         </div>
         <div class="trending-line padding-site">
             <div class="trending-text clearfix">
-                <p class="trending-head clearfix">Trending Products</p> <a href="#" class="explore-all">explore all <img src="img/arrow.svg" alt="arrow"></a> </div>
+                <p class="trending-head clearfix">Trending Products</p> <a href="product.html" class="explore-all">explore all <img src="img/arrow.svg" alt="arrow"></a> </div>
             <div class="trending-catalog">
-                <a href="#" class="trending-picture"><img src="img/product-11.jpg" alt="product-11"></a><a href="#" class="trending-picture"><img src="img/product-21.jpg" alt="product-21"></a><a href="#" class="trending-picture trending-picture-right"><img src="img/product-31.jpg" alt="product-31"></a><a href="#" class="trending-picture"><img src="img/product-41.jpg" alt="product-41"></a><a href="#" class="trending-picture"><img src="img/product-5.jpg" alt="product-51"></a><a href="#" class="trending-picture trending-picture-right"><img src="img/product-6.jpg" alt="product-61"></a>
+                <a href="deals.html" class="trending-picture"><img src="img/product-11.jpg" alt="product-11"></a><a href="deals.html" class="trending-picture"><img src="img/product-21.jpg" alt="product-21"></a><a href="deals.html" class="trending-picture trending-picture-right"><img src="img/product-31.jpg" alt="product-31"></a><a href="deals.html" class="trending-picture"><img src="img/product-41.jpg" alt="product-41"></a><a href="deals.html" class="trending-picture"><img src="img/product-5.jpg" alt="product-51"></a><a href="deals.html" class="trending-picture trending-picture-right"><img src="img/product-6.jpg" alt="product-61"></a>
             </div>
         </div>
         <div class="hot-deal-slider padding-site">
@@ -95,7 +95,7 @@
                     <p class="exclusive-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a> </div>
             </div>
             <div class="exclusive-right">
-                <a href="#" class="exclusive-image top-exclusive-image"><img src="img/product-2-sm.jpg" alt="exclusive-image"></a><a href="#" class="exclusive-image top-exclusive-image"><img src="img/product-3-sm.jpg" alt="exclusive-image"></a><a href="#" class="exclusive-image"><img src="img/product-4-sm.jpg" alt="exclusive-image"></a><a href="#" class="exclusive-image"><img src="img/product-5-sm.jpg" alt="exclusive-image"></a>
+                <a href="deals.html" class="exclusive-image top-exclusive-image"><img src="img/product-2-sm.jpg" alt="exclusive-image"></a><a href="deals.html" class="exclusive-image top-exclusive-image"><img src="img/product-3-sm.jpg" alt="exclusive-image"></a><a href="deals.html" class="exclusive-image"><img src="img/product-4-sm.jpg" alt="exclusive-image"></a><a href="deals.html" class="exclusive-image"><img src="img/product-5-sm.jpg" alt="exclusive-image"></a>
             </div>
         </div>
         <div class="mobile-app-line padding-site">
