--- a/interior/deals.html
+++ b/interior/deals.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>product-deals</title>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"> </head>
 
@@ -61,7 +62,7 @@
                 <a href="#" class="related-card"><img src="img/product-11.jpg" alt="product-11"></a><a href="#" class="related-card"><img src="img/product-21.jpg" alt="product-21"></a><a href="#" class="related-card right-card"><img src="img/product-31.jpg" alt="product-31"></a>
             </div>
         </div>
-        <div class="footer deals-footer padding-site">
+        <div class="footer padding-site">
             <div class="footer-content">
                 <div class="contact-us">
                     <h6 class="contact-h6">Contact Us</h6>
@@ -98,10 +99,10 @@
             </div>
             <div class="lower-footer"> <span class="copyright">&#169; Copyright - INTERIOR 2016. All Rights Reserved.</span>
                 <div class="social-links">
-                    <a href="#" class="circle-link"><img src="img/facebook-icon.png" alt="facebook" width="13px;"></a>
-                    <a href="#" class="circle-link"><img src="img/twitter-icon.png" alt="twitter" width="14px"></a>
+                    <a href="#" class="circle-link"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#" class="circle-link"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                     <a href="#" class="circle-link"><img src="img/google-icon.png" alt="google" width="14"></a>
-                    <a href="#" class="circle-link"><img src="img/pinterest-icon.png" alt="pinterest" width="15"></a>
+                    <a href="#" class="circle-link"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
                 </div> <span class="cookies">Terms &#38; Conditions / Privacy policy &#38; Cookies</span> </div>
         </div>
     </div>
