--- a/interior/index.html
+++ b/interior/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
+</head>
+
 
 <body>
     <div class="container">
@@ -26,7 +29,8 @@
             <div class="slider-text">
                 <p class="trending">TRENDING</p>
                 <h2 class="slider-h2">Fishnet Chair</h2>
-                <p class="slider-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a> </div>
+                <p class="slider-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a>
+            </div>
             <div class="navigation">
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle circle-active"></a>
@@ -63,15 +67,18 @@
             <div class="promo-left clearfix">
                 <p class="exclusive">exclusive</p>
                 <h3 class="promo-h3">Fishnet Chair</h3>
-                <p class="promo-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a> </div>
+                <p class="promo-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a>
+            </div>
             <div class="promo-right">
                 <p class="exclusive">exclusive</p>
                 <h3 class="promo-h3">Fishnet Chair</h3>
-                <p class="promo-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a> </div>
+                <p class="promo-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a>
+            </div>
         </div>
         <div class="trending-line padding-site">
             <div class="trending-text clearfix">
-                <p class="trending-head clearfix">Trending Products</p> <a href="product.html" class="explore-all">explore all <img src="img/arrow.svg" alt="arrow"></a> </div>
+                <p class="trending-head clearfix">Trending Products</p> <a href="product.html" class="explore-all">explore all <img src="img/arrow.svg" alt="arrow"></a>
+            </div>
             <div class="trending-catalog">
                 <a href="deals.html" class="trending-picture"><img src="img/product-11.jpg" alt="product-11"></a><a href="deals.html" class="trending-picture"><img src="img/product-21.jpg" alt="product-21"></a><a href="deals.html" class="trending-picture trending-picture-right"><img src="img/product-31.jpg" alt="product-31"></a><a href="deals.html" class="trending-picture"><img src="img/product-41.jpg" alt="product-41"></a><a href="deals.html" class="trending-picture"><img src="img/product-5.jpg" alt="product-51"></a><a href="deals.html" class="trending-picture trending-picture-right"><img src="img/product-6.jpg" alt="product-61"></a>
             </div>
@@ -80,7 +87,8 @@
             <div class="hot-deal-text">
                 <p class="hot-deal">Hot deal</p>
                 <h2 class="hot-deal-h2">Fishnet Chair</h2>
-                <p class="hot-deal-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a> </div>
+                <p class="hot-deal-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a>
+            </div>
             <div class="navigation">
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle circle-active"></a>
@@ -92,7 +100,8 @@
                 <div class="exclusive-text">
                     <p class="exclusive">exclusive</p>
                     <h3 class="exclusive-h3">Fishnet Chair</h3>
-                    <p class="exclusive-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a> </div>
+                    <p class="exclusive-content">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us <img src="img/arrow.svg" alt=">"></a>
+                </div>
             </div>
             <div class="exclusive-right">
                 <a href="deals.html" class="exclusive-image top-exclusive-image"><img src="img/product-2-sm.jpg" alt="exclusive-image"></a><a href="deals.html" class="exclusive-image top-exclusive-image"><img src="img/product-3-sm.jpg" alt="exclusive-image"></a><a href="deals.html" class="exclusive-image"><img src="img/product-4-sm.jpg" alt="exclusive-image"></a><a href="deals.html" class="exclusive-image"><img src="img/product-5-sm.jpg" alt="exclusive-image"></a>
@@ -144,13 +153,12 @@
             </div>
             <div class="lower-footer"> <span class="copyright">&#169; Copyright - INTERIOR 2016. All Rights Reserved.</span>
                 <div class="social-links">
-                    <a href="#" class="circle-link"><img src="img/facebook-icon.png" alt="facebook" width="13px;"></a>
-                    <a href="#" class="circle-link"><img src="img/twitter-icon.png" alt="twitter" width="14px"></a>
+                    <a href="#" class="circle-link"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#" class="circle-link"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                     <a href="#" class="circle-link"><img src="img/google-icon.png" alt="google" width="14"></a>
-                    <a href="#" class="circle-link"><img src="img/pinterest-icon.png" alt="pinterest" width="15"></a>
-                </div> <span class="cookies">Terms &#38; Conditions / Privacy policy &#38; Cookies</span> </div>
+                    <a href="#" class="circle-link"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
+                </div> <span class="cookies">Terms &#38; Conditions / Privacy policy &#38; Cookies</span>
+            </div>
         </div>
     </div>
-</body>
-
-</html>
+</body></html>
