--- a/interior/contact.html
+++ b/interior/contact.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>contact</title>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
     <div class="container">
@@ -21,7 +23,8 @@
                     <a href="#" class="menu-link"><img src="img/search.svg" alt="search"></a>
                 </li>
             </ul>
-            <h1 class="contact-h1">Contact Us</h1> </div>
+            <h1 class="contact-h1">Contact Us</h1>
+        </div>
         <div class="contact-content padding-site clearfix">
             <div class="contact-card"> <img src="img/PinClipart.co.png" alt="marker" width="38" height="48" class="marker-image">
                 <h3 class="contact-h3">California</h3>
@@ -59,7 +62,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer contact-footer padding-site">
+        <div class="footer padding-site">
             <div class="footer-content">
                 <div class="contact-us">
                     <h6 class="contact-h6">Contact Us</h6>
@@ -96,13 +99,12 @@
             </div>
             <div class="lower-footer"> <span class="copyright">&#169; Copyright - INTERIOR 2016. All Rights Reserved.</span>
                 <div class="social-links">
-                    <a href="#" class="circle-link"><img src="img/facebook-icon.png" alt="facebook" width="13px;"></a>
-                    <a href="#" class="circle-link"><img src="img/twitter-icon.png" alt="twitter" width="14px"></a>
+                    <a href="#" class="circle-link"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#" class="circle-link"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                     <a href="#" class="circle-link"><img src="img/google-icon.png" alt="google" width="14"></a>
-                    <a href="#" class="circle-link"><img src="img/pinterest-icon.png" alt="pinterest" width="15"></a>
-                </div> <span class="cookies">Terms &#38; Conditions / Privacy policy &#38; Cookies</span> </div>
+                    <a href="#" class="circle-link"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
+                </div> <span class="cookies">Terms &#38; Conditions / Privacy policy &#38; Cookies</span>
+            </div>
         </div>
     </div>
-</body>
-
-</html>
+</body></html>
